# benchmark_invprob_largescale

./: .gitignore  LICENSE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: docs.yml  main.yml
benchmark_inference/: objective.py
benchmark_inference/configs/: ci_smoke.yml  config_parallel.yml  highres_imaging.yml  highres_imaging_torchrun_perso.yml  radio_config.yaml  tomography_2d.yml  tomography_3d.yml  torchrun-config.yaml
benchmark_inference/datasets/: highres_color_image.py  radio_interferometry.py  simulated.py  tomography_2d.py  tomography_3d.py
benchmark_inference/install_scripts/: config_slurm.yaml  install_radio.sh
benchmark_inference/solvers/: pnp.py
benchmark_training/: objective.py
benchmark_training/configs/: config_parallel.yml  tomography_3d_train.yml  urban100_unrolled.yml
benchmark_training/datasets/: tomography_3d_train.py  urban100.py
benchmark_training/solvers/: unrolled_pnp.py
benchmark_workflows/: objective.py
benchmark_workflows/configs/: config_parallel.yml  simulated.yml
benchmark_workflows/datasets/: simulated.py
benchmark_workflows/solvers/: pnp_stream.py
demos/demo_cryo/: conf_supervised.yml  conf_supervised_local.yml  main.py
docs/source/: conf.py  index.rst  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/auto_examples/: demo_torchrun_cpu.codeobj.json  demo_torchrun_cpu.ipynb  demo_torchrun_cpu.py  demo_torchrun_cpu.py.md5  demo_torchrun_cpu.rst  index.rst  sg_execution_times.rst
docs/source/examples/: highres_example.rst  index.rst  tomography_2d.rst  tomography_3d.rst
docs/source/getting_started/: config_guide.rst  index.rst  quickstart.rst
docs/source/takeaways/: distributed_scaling.rst  gpu_memory_time_analysis.rst  index.rst
src/toolsbench/: __init__.py
src/toolsbench/analysis_plots/: batch_size_vs_throughput.py  generate_dataset_previews.py  image_size_vs_gpu_memory.py  visualize_general_results.py  visualize_rank_details.py  visualize_scaling.py  visualize_training_results.py
src/toolsbench/utils/: __init__.py  deepinv_imager.py  generate_radio_data.py  gpu_metrics.py  karabo_utils.py  make_radio_dataset.py  radio_utils.py  simai_components.py  solver_utils.py  submit_job.py  support_3d.py  support_dataloader.py  tomo_utils.py  trainer.py  walnut.py
(+10 files in other folders)
